Disable biased locking