@@ -465,6 +465,7 @@ class JavaServiceDistributionPluginTests extends GradleIntegrationSpec {
                 "-XX:NumberOfGCLogFiles=10",
                 "-Xloggc:var/log/gc-%t-%p.log",
                 "-verbose:gc",
+                "-XX:-UseBiasedLocking",
                 '-XX:+UseParallelOldGC',
                 '-Xmx4M',
                 '-Djavax.net.ssl.trustStore=truststore.jks'])
